--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
     "express": "^4.21.1",
-    "react-icons": "^5.3.0"
+    "mongoose": "^8.7.2"
   },
   "name": "primeestates",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server/index.js",
-    "start": "node server/index.js",
+    "dev": "nodemon --env-file=.env server/index.js",
+    "start": "node --env-file=.env server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Musab Sayyed",
