--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "dev": "nodemon --env-file=.env server/index.js",
     "start": "node --env-file=.env server/index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Musab Sayyed",
