--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --env-file=.env server/index.js",
-    "start": "node --env-file=.env server/index.js",
+    "start": "node server/index.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
